data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_412.wast
;; 3. **Test Description**: A loop containing a `br_if` at the beginning that conditionally skips the rest of the loop body and goes to an `unreachable` due to a misinterpreted branch table:    - **Constraint Checked**: Proper handling of `br_if` and branch table validation.    - **Unreachable Code Execution**: Incorrectly evaluated conditional branches could cause the program to reach `unreachable`.

(assert_invalid
  (module
    (func $loop-with-br_if (result i32)
      (i32.const 1)
      (loop (result i32)
        (br_if 0 (i32.const 1))
        (nop)
      )
      (unreachable)
    )
  )
  "type mismatch"
)